8228888: C2 compilation fails with assert "m has strange control"

Weakened too strong assert.

Reviewed-by: kvn, roland